# h-drone-swarm

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: test.yaml
dnas/drone_swarm/workdir/: dna.yaml
dnas/drone_swarm/zomes/coordinator/drone_swarm/: Cargo.toml
dnas/drone_swarm/zomes/coordinator/drone_swarm/src/: lib.rs  lobby.rs  signal.rs
dnas/drone_swarm/zomes/integrity/drone_swarm/: Cargo.toml
dnas/drone_swarm/zomes/integrity/drone_swarm/src/: lib.rs  lobby.rs
tests/: package.json
tests/src/drone_swarm/drone_swarm/: common.ts  lobby.test.ts
ui/: package.json  tsconfig.vitest.json
ui/src/: App.vue
ui/src/client/: api.ts  index.ts  signal.ts  types.ts
ui/src/drone_swarm/drone_swarm/: CreateLobby.vue  EditLobby.vue  LobbyDetail.vue  types.ts
ui/src/router/: index.ts
ui/src/stores/: index.ts  lobbies.ts  stateMachine.ts
ui/src/views/: HomeView.vue  LobbiesView.vue
workdir/: happ.yaml  web-happ.yaml
