[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.4.0-beta-dev.17"
hdk = "=0.3.0-beta-dev.21"
serde = "1"

[workspace.dependencies.drone_swarm]
path = "dnas/drone_swarm/zomes/coordinator/drone_swarm"

[workspace.dependencies.drone_swarm_integrity]
path = "dnas/drone_swarm/zomes/integrity/drone_swarm"
